successful regeneration of HROOT package

--- a/HROOT.conf
+++ b/HROOT.conf
@@ -1,4 +1,4 @@
-HROOTconf { 
+fficxxconf { 
   scriptbase: /home/wavewave/repo/src/HROOT-generate
   workingdir: /home/wavewave/repo/src/HROOT-generate/working
   installbase: /home/wavewave/repo/src/HROOT
