--- a/HROOT-generate.cabal
+++ b/HROOT-generate.cabal
@@ -8,8 +8,7 @@ Author:		Ian-Woo Kim
 Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
 Build-Type: 	Simple
 Cabal-Version:  >= 1.8
-Data-files: 
-            template/HROOT.cabal.st
+Data-files: template/HROOT.cabal.st
             -- template/TypeCast.hs
             -- template/*.h.st
             -- template/*.hs.st
