--- a/HROOT.conf
+++ b/HROOT.conf
@@ -1,5 +1,4 @@
-fficxxconf { 
-  scriptbase: /home/wavewave/repo/src/HROOT-generate
-  workingdir: /home/wavewave/repo/src/HROOT-generate/working
-  installbase: /home/wavewave/repo/src/HROOT
-}
+scriptbase="/home/wavewave/repo/src/HROOT-generate"
+workingdir="/home/wavewave/repo/src/HROOT-generate/working"
+installbase="/home/wavewave/repo/src/HROOT"
+
