--- a/HROOT-generate.cabal
+++ b/HROOT-generate.cabal
@@ -9,11 +9,6 @@ Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
 Build-Type: 	Simple
 Cabal-Version:  >= 1.8
 Data-files: template/HROOT.cabal.st
-            -- template/TypeCast.hs
-            -- template/*.h.st
-            -- template/*.hs.st
-            -- template/*.hsc.st
-            -- template/*.cpp.st
 
 Executable HROOT-generate
   Main-is: HROOT-generate.hs
@@ -27,12 +22,9 @@ Executable HROOT-generate
                  directory, 
                  process, 
                  HStringTemplate, 
-                 HSH, 
-                 safe,
-                 strict, 
-                 filemanip, 
                  split,
-                 parsec>3, 
+                 configurator >= 0.2,
+                 -- parsec>3, 
                  cmdargs, 
                  transformers, 
                  template-haskell,
@@ -52,17 +44,13 @@ Library
                  directory, 
                  process, 
                  HStringTemplate, 
-                 HSH, 
-                 safe, 
-                 strict, 
-                 filemanip, 
                  split,
-                 parsec>3, 
+                 -- parsec>3, 
                  cmdargs, 
                  transformers, 
                  template-haskell, 
                  Cabal, 
-                 fficxx >= 0.1.0.999 && < 0.1.2
+                 fficxx
 
   Exposed-Modules: 
                    HROOT.Generate.ROOT
@@ -71,25 +59,4 @@ Library
                    HROOT.Generate.ROOTsmall
                    HROOT.Generate.ROOTAnnotatesmall
                    HROOT.Generate.ROOTModulesmall
-                   Text.StringTemplate.Helpers
-  Other-Modules: 
---                   HEP.Parser.Config
---                   HROOT.Generate.Type.CType
---                   HROOT.Generate.Type.Class
---                   HROOT.Generate.Type.Method
---                   HROOT.Generate.Type.Module
---                   HROOT.Generate.Code.MethodDef
---                   HROOT.Generate.Code.Cpp
---                   HROOT.Generate.Code.HsFrontEnd
---                   HROOT.Generate.Code.HsFFI
---                   HROOT.Generate.Code.Cabal
---                   HROOT.Generate.Generator.Command
---                   HROOT.Generate.Generator.Driver
---                   HROOT.Generate.Generator.ContentMaker
---                   HROOT.Generate.Util
-                
-
-  Other-Modules: 
---                   HROOT.Generate.QQ.Verbatim
---                   HROOT.Generate.Type.Annotate
---                   HEP.Util.File
+                   -- Text.StringTemplate.Helpers
