--- a/HROOT-generate.cabal
+++ b/HROOT-generate.cabal
@@ -8,7 +8,7 @@ Author:		Ian-Woo Kim
 Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
 Build-Type: 	Simple
 Cabal-Version:  >= 1.8
-Data-files: template/HROOT.cabal.st
+Data-files: 
 
 Executable HROOT-generate
   Main-is: HROOT-generate.hs
