--- a/HROOT-generate.cabal
+++ b/HROOT-generate.cabal
@@ -56,9 +56,12 @@ Library
                  fficxx
 
   Exposed-Modules: 
+                   HROOT.Generate.MakePkg 
                    HROOT.Generate.ROOT
                    HROOT.Generate.ROOTAnnotate
                    HROOT.Generate.ROOTModule
                    HROOT.Generate.ROOTsmall
                    HROOT.Generate.ROOTAnnotatesmall
                    HROOT.Generate.ROOTModulesmall
+  Other-Modules: 
+                   Paths_HROOT_generate
