--- a/HROOT.conf
+++ b/HROOT.conf
@@ -1,4 +1,11 @@
-scriptbase="/home/wavewave/repo/src/HROOT-generate"
-workingdir="/home/wavewave/repo/src/HROOT-generate/working"
-installbase="/home/wavewave/repo/src/HROOT"
+HROOT-core { 
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/src/HROOT-generate/working-core"
+  installbase="/home/wavewave/repo/src/HROOT-core"
+}
 
+HROOT-hist { 
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/src/HROOT-generate/working-hist"
+  installbase="/home/wavewave/repo/src/HROOT-hist"
+}
