--- a/HROOT.conf
+++ b/HROOT.conf
@@ -9,3 +9,9 @@ HROOT-hist {
   workingdir="/home/wavewave/repo/src/HROOT-generate/working-hist"
   installbase="/home/wavewave/repo/src/HROOT-hist"
 }
+
+HROOT-graf { 
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/src/HROOT-generate/working-graf"
+  installbase="/home/wavewave/repo/src/HROOT-graf"
+}
