--- a/HROOT.conf
+++ b/HROOT.conf
@@ -1,17 +1,29 @@
 HROOT-core { 
   scriptbase="/home/wavewave/repo/src/HROOT-generate"
-  workingdir="/home/wavewave/repo/src/HROOT-generate/working-core"
-  installbase="/home/wavewave/repo/src/HROOT-core"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/core"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-core"
 }
 
 HROOT-hist { 
   scriptbase="/home/wavewave/repo/src/HROOT-generate"
-  workingdir="/home/wavewave/repo/src/HROOT-generate/working-hist"
-  installbase="/home/wavewave/repo/src/HROOT-hist"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/hist"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-hist"
 }
 
 HROOT-graf { 
   scriptbase="/home/wavewave/repo/src/HROOT-generate"
-  workingdir="/home/wavewave/repo/src/HROOT-generate/working-graf"
-  installbase="/home/wavewave/repo/src/HROOT-graf"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/graf"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-graf"
+}
+
+HROOT-math { 
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/math"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-math"
+}
+
+HROOT-io { 
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/io"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-io"
 }
