generate umbrella package (HROOT)

--- a/HROOT.conf
+++ b/HROOT.conf
@@ -27,3 +27,9 @@ HROOT-io {
   workingdir="/home/wavewave/repo/workspace/HROOT/working/io"
   installbase="/home/wavewave/repo/workspace/HROOT/HROOT-io"
 }
+
+HROOT { 
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/HROOT"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT"
+}
