--- a/HROOT-generate.cabal
+++ b/HROOT-generate.cabal
@@ -8,36 +8,21 @@ Author:		Ian-Woo Kim
 Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
 Build-Type: 	Simple
 Cabal-Version:  >= 1.8
-Data-files:     template/HROOT-core/CHANGES
-                template/HROOT-core/Config.hs
+Data-files:     template/HROOT-core/Config.hs
                 template/HROOT-core/LICENSE
-                template/HROOT-core/README.md 
                 template/HROOT-core/Setup.lhs
-                template/HROOT-core/example/*.hs
-                template/HROOT-hist/CHANGES
                 template/HROOT-hist/Config.hs
                 template/HROOT-hist/LICENSE
-                template/HROOT-hist/README.md 
                 template/HROOT-hist/Setup.lhs
-                template/HROOT-hist/example/*.hs
-                template/HROOT-graf/CHANGES
                 template/HROOT-graf/Config.hs
                 template/HROOT-graf/LICENSE
-                template/HROOT-graf/README.md 
                 template/HROOT-graf/Setup.lhs
-                template/HROOT-graf/example/*.hs
-                template/HROOT-math/CHANGES
                 template/HROOT-math/Config.hs
                 template/HROOT-math/LICENSE
-                template/HROOT-math/README.md 
                 template/HROOT-math/Setup.lhs
-                template/HROOT-math/example/*.hs
-                template/HROOT-io/CHANGES
                 template/HROOT-io/Config.hs
                 template/HROOT-io/LICENSE
-                template/HROOT-io/README.md 
                 template/HROOT-io/Setup.lhs
-                template/HROOT-io/example/*.hs
                 template/HROOT/CHANGES
                 template/HROOT/Config.hs
                 template/HROOT/LICENSE
