--- a/HROOT.conf
+++ b/HROOT.conf
@@ -28,6 +28,18 @@ HROOT-io {
   installbase="/home/wavewave/repo/workspace/HROOT/HROOT-io"
 }
 
+HROOT-RooFit { 
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/RooFit"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-RooFit"
+}
+
+HROOT-RooFit-RooStats { 
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/RooStats"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-RooStats"
+}
+
 HROOT { 
   scriptbase="/home/wavewave/repo/src/HROOT-generate"
   workingdir="/home/wavewave/repo/workspace/HROOT/working/HROOT"
