--- a/HROOT.conf
+++ b/HROOT.conf
@@ -10,6 +10,12 @@ HROOT-hist {
   installbase="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/HROOT-hist"
 }
 
+HROOT-tree { 
+  scriptbase="/afs/cern.ch/user/i/ikim/repo/src/HROOT-generate"
+  workingdir="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/working/tree"
+  installbase="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/HROOT-tree"
+}
+
 HROOT-graf { 
   scriptbase="/afs/cern.ch/user/i/ikim/repo/src/HROOT-generate"
   workingdir="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/working/graf"
