--- a/HROOT.conf
+++ b/HROOT.conf
@@ -1,53 +1,53 @@
 HROOT-core { 
-  scriptbase="/afs/cern.ch/user/i/ikim/repo/src/HROOT-generate"
-  workingdir="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/working/core"
-  installbase="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/HROOT-core"
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/core"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-core"
 }
 
 HROOT-hist { 
-  scriptbase="/afs/cern.ch/user/i/ikim/repo/src/HROOT-generate"
-  workingdir="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/working/hist"
-  installbase="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/HROOT-hist"
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/hist"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-hist"
 }
 
 HROOT-tree { 
-  scriptbase="/afs/cern.ch/user/i/ikim/repo/src/HROOT-generate"
-  workingdir="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/working/tree"
-  installbase="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/HROOT-tree"
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/tree"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-tree"
 }
 
 HROOT-graf { 
-  scriptbase="/afs/cern.ch/user/i/ikim/repo/src/HROOT-generate"
-  workingdir="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/working/graf"
-  installbase="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/HROOT-graf"
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/graf"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-graf"
 }
 
 HROOT-math { 
-  scriptbase="/afs/cern.ch/user/i/ikim/repo/src/HROOT-generate"
-  workingdir="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/working/math"
-  installbase="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/HROOT-math"
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/math"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-math"
 }
 
 HROOT-io { 
-  scriptbase="/afs/cern.ch/user/i/ikim/repo/src/HROOT-generate"
-  workingdir="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/working/io"
-  installbase="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/HROOT-io"
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/io"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-io"
 }
 
 HROOT-RooFit { 
-  scriptbase="/afs/cern.ch/user/i/ikim/repo/src/HROOT-generate"
-  workingdir="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/working/RooFit"
-  installbase="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/HROOT-RooFit"
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/RooFit"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-RooFit"
 }
 
 HROOT-RooFit-RooStats { 
-  scriptbase="/afs/cern.ch/user/i/ikim/repo/src/HROOT-generate"
-  workingdir="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/working/RooStats"
-  installbase="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/HROOT-RooStats"
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/RooStats"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT-RooStats"
 }
 
 HROOT { 
-  scriptbase="/afs/cern.ch/user/i/ikim/repo/src/HROOT-generate"
-  workingdir="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/working/HROOT"
-  installbase="/afs/cern.ch/user/i/ikim/repo/workspace/HROOT/HROOT"
+  scriptbase="/home/wavewave/repo/src/HROOT-generate"
+  workingdir="/home/wavewave/repo/workspace/HROOT/working/HROOT"
+  installbase="/home/wavewave/repo/workspace/HROOT/HROOT"
 }
