--- a/HROOT-generate.cabal
+++ b/HROOT-generate.cabal
@@ -102,9 +102,9 @@ Library
                    HROOT.Data.Math.Class
                    HROOT.Data.IO.Annotate
                    HROOT.Data.IO.Class
-                   -- HROOT.Data.RooFit.Annotate
-                   -- HROOT.Data.RooFit.Class
-                   -- HROOT.Data.RooFit.RooStats.Class
+                   HROOT.Data.RooFit.Annotate
+                   HROOT.Data.RooFit.Class
+                   HROOT.Data.RooFit.RooStats.Class
                    HROOT.Data.Tree.Annotate
                    HROOT.Data.Tree.Class
                    
