--- a/HROOT-generate/HROOT-generate.cabal
+++ b/HROOT-generate/HROOT-generate.cabal
@@ -61,7 +61,8 @@ Library
                  cmdargs,
                  containers,
                  directory,
-                 fficxx >= 0.5,
+                 fficxx >= 0.6,
+                 fficxx-runtime >= 0.6,
                  filepath>1,
                  haskell-src-exts,
                  mtl>2,
