unify DepGraph into HROOT-generate. ormolu format

--- a/HROOT-generate/HROOT-generate.cabal
+++ b/HROOT-generate/HROOT-generate.cabal
@@ -91,14 +91,15 @@ Executable HROOT-generate
   hs-source-dirs: exe
   ghc-options: 	-Wall -Werror -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
   ghc-prof-options: -fprof-cafs -fprof-auto
-  Build-Depends: base>4,
+  Build-Depends: array,
+                 base>4,
                  Cabal,
-                 cmdargs,
                  containers,
                  directory,
-                 fficxx >= 0.5,
+                 fficxx >= 0.6.999,
                  filepath>1,
                  mtl>2,
+                 optparse-applicative,
                  process,
                  split,
                  template,
