--- a/workspace/cabal.project
+++ b/workspace/cabal.project
@@ -1,6 +1,6 @@
 optional-packages:
-          ../fficxx/fficxx/fficxx.cabal
-          ../fficxx/fficxx-runtime/fficxx-runtime.cabal
+          ../fficxx/fficxx
+          ../fficxx/fficxx-runtime
           stdcxx/
           ../HROOT-generate/        
           HROOT-core/
